[package]
name = "turbo-json"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo-json-checker = "2.0.1"
rayon = "1.5.1"
indicatif = {version = "0.16.2", features = ["rayon"]}
term-painter = "0.3.0"
