[package]
name = "turbo-json"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "turbo-json"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo-json-checker = "2.0.1"
rayon = "1.5.1"
indicatif = {version = "0.17.0-beta.1", features = ["rayon"]}
termion = "1.5.6"
